# vain

./: .gitignore  Cargo.toml  LICENSE  README.md  limine.conf  rust-toolchain.toml
kernel/: Cargo.toml  linker-x86_64.ld
kernel/.cargo/: config.toml
kernel/src/: boot.rs  main.rs  sync.rs
kernel/src/arch/: acpi.rs  apic.rs  gdt.rs  idt.rs  mod.rs  paging.rs  syscall.rs
kernel/src/cap/: cap_table.rs  mod.rs
kernel/src/console/: framebuffer.rs  keyboard.rs  mod.rs  serial.rs  vga_font.rs
kernel/src/ipc/: endpoint.rs  mod.rs  notification.rs
kernel/src/mm/: frame_alloc.rs  heap.rs  mod.rs  vmem.rs
kernel/src/process/: mod.rs
kernel/src/sched/: context_switch.rs  mod.rs  run_queue.rs  thread.rs
kernel/src/syscall/: dispatch.rs
libs/abi/: Cargo.toml
libs/abi/src/: ipc_message.rs  lib.rs  syscall_numbers.rs
libs/allocator/: Cargo.toml
libs/allocator/src/: bitmap.rs
libs/elf/: Cargo.toml
libs/elf/src/: lib.rs
target-specs/: x86_64-vain.json
userspace/drivers/framework/: Cargo.toml
userspace/drivers/framework/src/: lib.rs
userspace/drivers/ps2-keyboard/: Cargo.toml
userspace/drivers/ps2-keyboard/src/: main.rs
userspace/init/: Cargo.toml  linker.ld
userspace/init/.cargo/: config.toml
userspace/init/src/: main.rs
userspace/libos/: Cargo.toml
userspace/libos/src/: alloc.rs  lib.rs  panic.rs  start.rs  syscall.rs
xtask/src/: main.rs
